task03/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task03-deployment
  labels:
    app: task03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task03
  template:
    metadata:
      labels:
        app: task03
    spec:
      containers:
        - name: task03
          image: dbelokursky/task03:0.0.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /health
              port: 8000
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /health
              port: 8000
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: task03-cm
            items:
              - key: application.yml
                path: application.yml
