task03/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: task03-service
spec:
  selector:
    app: task03
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
